--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -16,7 +16,7 @@ footer.footer
                             path.footer__logo__path(d="M70.7,1.7v28.5L36,1.7H70.7z")
             .col-12.col-sm-4.col-lg-2
                 a.footer__email(href="mailto:work@websoho.ru") work@websoho.ru
-            .col-12.col-xl-6.col-lg-6
+            nav.col-12.col-xl-6.col-lg-6
                 ul.footer__navbar
                     li.footer__navbar__item
                         a.footer__navbar__link(href="#") Дизайн
