--- a/src/css/content/_contentForm.scss
+++ b/src/css/content/_contentForm.scss
@@ -25,3 +25,16 @@
         }
     }
 }
+
+/* Media */
+@media(max-width: 1400px){}
+@media(max-width: 992px){
+    .content_form{
+        overflow: hidden;
+        .element {
+            width: 1200px;
+        }
+    }
+}
+@media(max-width: 768px){}
+@media(max-width: 576px){}
