--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2544,6 +2544,37 @@ template {
   background: rgba(0, 0, 0, 0);
 }
 
+/* Media */
+@media (max-width: 992px) {
+  .item_last-md {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .item {
+    margin-bottom: 20px;
+  }
+  .item__offer {
+    font-size: 14px;
+  }
+  .item_info {
+    padding: 20px;
+  }
+  .item_result .item__result {
+    font-size: 24px;
+  }
+  .item_image {
+    position: relative;
+    padding: 0 26px;
+  }
+  .item_image .item__number {
+    position: absolute;
+    margin: 0;
+    left: -10px;
+  }
+}
+
 .list {
   padding-left: 20px;
   margin-bottom: 0;
@@ -2585,6 +2616,13 @@ template {
   width: 30px;
   height: 30px;
   border-radius: 15px;
+}
+
+/* Media */
+@media (max-width: 768px) {
+  .list_ol + .list__item {
+    margin-top: 20px;
+  }
 }
 
 .form .input-text {
@@ -2670,6 +2708,16 @@ template {
   color: #d70000;
 }
 
+/* Media */
+@media (max-width: 768px) {
+  .form .input-text {
+    font-size: 14px;
+  }
+  .form .input-inline {
+    font-size: 14px;
+  }
+}
+
 .btn {
   display: inline-block;
   font-size: 18px;
@@ -2707,6 +2755,20 @@ template {
 
 .btn_border:hover {
   border-color: #bfbfbf;
+}
+
+/* Media */
+@media (max-width: 1400px) {
+  .btn {
+    font-size: 16px;
+    padding: 15px 40px;
+  }
+}
+
+@media (max-width: 576px) {
+  .btn {
+    width: auto;
+  }
 }
 
 .content {
@@ -2811,7 +2873,7 @@ template {
 }
 
 .content__group {
-  margin: 40px 0;
+  margin: 40px 0 25px;
 }
 
 .content__group__link {
@@ -2836,6 +2898,51 @@ template {
 
 .content_padding {
   padding: 150px 0;
+}
+
+@media (max-width: 1400px) {
+  .content .offer.last-xl {
+    margin-bottom: 40px;
+  }
+  .content_padding {
+    padding: 100px 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .content .heading {
+    font-size: 36px;
+    line-height: 44px;
+    margin-bottom: 40px;
+  }
+  .content .heading + .offer {
+    margin-top: 40px;
+  }
+  .content .heading_small {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .content .element_point {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .content {
+    padding: 60px 0;
+  }
+  .content .heading {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .content .heading_small {
+    font-size: 22px;
+    line-height: 30px;
+  }
+  .content__group__link {
+    font-size: 12px;
+    padding: 10px 12px 8px;
+  }
 }
 
 .content_title {
@@ -2878,6 +2985,59 @@ template {
   line-height: 26px;
 }
 
+@media (max-width: 1400px) {
+  .content_title .heading {
+    font-size: 60px;
+    line-height: 70px;
+  }
+  .content_title__elements {
+    bottom: -100px;
+  }
+}
+
+@media (max-width: 992px) {
+  .content_title {
+    padding-top: 340px;
+  }
+  .content_title .heading {
+    font-size: 50px;
+    line-height: 64px;
+    margin-bottom: 40px;
+  }
+  .content_title__elements {
+    width: 680px;
+  }
+}
+
+@media (max-width: 768px) {
+  .content_title {
+    padding-top: 240px;
+  }
+  .content_title__elements {
+    width: 700px;
+  }
+}
+
+@media (max-width: 576px) {
+  .content_title {
+    padding-top: 250px;
+    min-height: 550px;
+  }
+  .content_title .heading {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .content_title .btn {
+    margin-left: 0px;
+  }
+  .content_title + .content {
+    padding-top: 80px;
+  }
+  .content_title__elements {
+    width: 720px;
+  }
+}
+
 .content_contact {
   background: #222222;
   z-index: 1;
@@ -2912,6 +3072,39 @@ template {
   background: #151515;
 }
 
+/* Media */
+@media (max-width: 1400px) {
+  .content_contact .form_inline {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .content_contact .form_inline {
+    margin: 40px 0;
+  }
+  .content_contact .form_inline .input-text {
+    width: calc(100% - 280px);
+  }
+  .content_contact .form_inline .btn {
+    width: 260px;
+  }
+}
+
+@media (max-width: 576px) {
+  .content_contact {
+    padding-bottom: 50px;
+  }
+  .content_contact .form .input-text {
+    float: none;
+    width: 100%;
+  }
+  .content_contact .form .btn {
+    margin: 20px 0;
+    width: 100%;
+  }
+}
+
 .content_price {
   background: #272727;
   color: #ffffff;
@@ -2926,6 +3119,28 @@ template {
 
 .content_price .content_price__container + .content_price__container {
   margin-top: 100px;
+}
+
+/* Media */
+@media (max-width: 1400px) {
+  .content_price .element {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .content_price .content_price__container + .content_price__container {
+    margin-top: 60px;
+  }
+  .content_price .element {
+    display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .content_price .content_price__container + .content_price__container {
+    margin-top: 0px;
+  }
 }
 
 .content_form {
@@ -2962,6 +3177,16 @@ template {
 
 .content_form .form .input-inline::placeholder {
   color: #3f3f3f;
+}
+
+/* Media */
+@media (max-width: 992px) {
+  .content_form {
+    overflow: hidden;
+  }
+  .content_form .element {
+    width: 1200px;
+  }
 }
 
 .header {
@@ -3193,6 +3418,10 @@ template {
   height: 310px;
 }
 
+.portfolio__item.last {
+  margin-right: 0;
+}
+
 .portfolio__title {
   display: inline-block;
   margin-left: auto;
@@ -3225,6 +3454,38 @@ template {
 .portfolio + .content {
   padding-top: 340px;
   margin-top: -340px;
+}
+
+/* Media */
+@media (max-width: 768px) {
+  .portfolio .heading {
+    font-size: 54px;
+    line-height: 62px;
+  }
+}
+
+@media (max-width: 576px) {
+  .portfolio {
+    padding-top: 60px;
+  }
+  .portfolio .heading {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .portfolio__elements {
+    width: 200px;
+    height: 200px;
+  }
+  .portfolio__row {
+    padding: 40px 0;
+    width: 1150px;
+    overflow-x: hidden;
+  }
+  .portfolio__item {
+    width: 200px;
+    height: 190px;
+    margin-right: 30px;
+  }
 }
 
 .post-preview {
@@ -3270,6 +3531,24 @@ template {
   color: #858585;
 }
 
+/* Media */
+@media (max-width: 992px) {
+  .post-preview__item {
+    margin-bottom: 40px;
+  }
+  .post-preview__item.last {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .post-preview {
+    padding: 60px 0;
+  }
+}
+
+/* Castomize column */
 @media (min-width: 992px) {
   .post-preview .col-lg-3 {
     -webkit-box-flex: 0;
@@ -3319,6 +3598,23 @@ template {
   flex: 0 0 110px;
   max-width: 110px;
   color: #858585;
+}
+
+/* Media */
+@media (max-width: 576px) {
+  .project .heading + .offer {
+    margin: 20px 0 40px;
+  }
+  .project__task__item {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 80px;
+    flex: 0 0 80px;
+    max-width: 80px;
+  }
+  .project__task__content .offer {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 
 .price {
@@ -3428,6 +3724,20 @@ template {
   white-space: nowrap;
 }
 
+/* Media */
+@media (max-width: 1400px) {
+  .price_large .price__header {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 576px) {
+  .price {
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+}
+
 .footer {
   padding: 25px 0;
   background: #242424;
@@ -3513,6 +3823,9 @@ template {
 }
 
 @media (max-width: 576px) {
+  .footer {
+    padding: 40px 0 30px;
+  }
   .footer__email {
     margin-top: 10px;
   }
@@ -3524,6 +3837,16 @@ template {
 
 .index .header__nav, .index .go-to-top {
   background: #1C097A;
+}
+
+/* Media */
+@media (max-width: 576px) {
+  .index .content_title {
+    padding-bottom: 60px;
+  }
+  .index .content_title .heading {
+    margin-bottom: 60px;
+  }
 }
 
 .design .header__email, .design .inside-page .header__link, .inside-page .design .header__link {
@@ -3587,6 +3910,56 @@ template {
 
 .design .content .item_image .item__image:hover:before {
   background: rgba(250, 33, 161, 0);
+}
+
+/* Media */
+@media (max-width: 1400px) {
+  .design .content_color {
+    background-position-y: -120px;
+    padding-top: 150px;
+  }
+}
+
+@media (max-width: 992px) {
+  .design .content_color {
+    background-position-y: -70px;
+    padding-top: 150px;
+  }
+  .design .content_color .heading + .subheading {
+    margin-top: 40px;
+  }
+  .design .content_color .element {
+    margin: 60px 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .design .content_color {
+    background-position-y: -50px;
+    padding-top: 100px;
+  }
+  .design .content_color .heading {
+    margin-bottom: 20px;
+  }
+  .design .content_color .heading + .subheading {
+    margin-top: 20px;
+  }
+  .design .content_color .subheading {
+    margin-bottom: 40px;
+  }
+  .design .content_color .element {
+    margin: 40px 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .design .content_color {
+    background-position-y: -30px;
+    padding-top: 80px;
+  }
+  .design .content_color .element {
+    margin: 40px 0;
+  }
 }
 
 .dev .header__email, .dev .inside-page .header__link, .inside-page .dev .header__link {
@@ -3670,6 +4043,22 @@ template {
   background: -webkit-linear-gradient(225deg, #fdc830 0%, #fed61d 100%);
   background: -o-linear-gradient(225deg, #fdc830 0%, #fed61d 100%);
   background: linear-gradient(-135deg, #fdc830 0%, #fed61d 100%);
+}
+
+/* Media */
+@media (max-width: 992px) {
+  .dev .content_element .element {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .dev .item {
+    margin-bottom: 30px;
+  }
+  .dev .item__header {
+    font-size: 28px;
+  }
 }
 
 .seo .header__email, .seo .inside-page .header__link, .inside-page .seo .header__link {
@@ -3782,6 +4171,29 @@ template {
   background: -webkit-linear-gradient(top, #637b0d 0%, #99af01 100%);
   background: -o-linear-gradient(top, #637b0d 0%, #99af01 100%);
   background: linear-gradient(180deg, #637b0d 0%, #99af01 100%);
+}
+
+/* Media */
+@media (max-width: 992px) {
+  .seo .content .col-comment .element_comment {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .seo .content_color .elements {
+    width: 100px;
+    margin: 40px auto;
+    display: block;
+  }
+}
+
+@media (max-width: 576px) {
+  .seo .content_title .heading {
+    font-size: 28px;
+    line-height: 38px;
+    word-break: break-word;
+  }
 }
 
 .marketing .header__email, .marketing .inside-page .header__link, .inside-page .marketing .header__link {
@@ -3912,6 +4324,59 @@ template {
   background: linear-gradient(180deg, #bf0e00 0%, #fd2d17 100%);
 }
 
+/* Media */
+@media (max-width: 1400px) {
+  .marketing .content_mockup .element {
+    width: 280px;
+  }
+  .marketing .content_color .row .column .heading {
+    font-size: 18px;
+    line-height: 24px;
+    white-space: normal;
+  }
+}
+
+@media (max-width: 992px) {
+  .marketing .content .col-comment .element {
+    display: none;
+  }
+  .marketing .content_color {
+    padding: 60px 0;
+  }
+  .marketing .content_color .row {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .marketing .content_color .row .column .heading {
+    font-size: 26px;
+    line-height: 34px;
+    white-space: normal;
+    margin-bottom: 20px;
+  }
+  .marketing .content_color .row .column .heading + .offer {
+    margin-top: 20px;
+  }
+  .marketing .content_mockup .element {
+    bottom: -80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .marketing .content_form {
+    padding-top: 120px;
+  }
+}
+
+@media (max-width: 576px) {
+  .marketing .content_form .heading {
+    font-size: 22px;
+    line-height: 28px;
+  }
+  .marketing .content .list {
+    padding: 20px;
+  }
+}
+
 .ad .header__email, .ad .inside-page .header__link, .inside-page .ad .header__link {
   color: #39482f;
 }
@@ -4004,6 +4469,36 @@ template {
   padding: 12px 30px;
 }
 
+/* Media */
+@media (max-width: 1400px) {
+  .ad .content_element .element_1 {
+    left: 0;
+    bottom: 370px;
+  }
+  .ad .content_element .element_2 {
+    top: 100px;
+    right: 0;
+  }
+  .ad .content .list__item_last {
+    margin-bottom: 0px;
+  }
+}
+
+@media (max-width: 992px) {
+  .ad .content_title__elements {
+    bottom: 60px;
+  }
+  .ad .content_element .element {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .ad .content_title__elements {
+    bottom: -100px;
+  }
+}
+
 .post {
   background: #1a1a1a;
 }
@@ -4011,17 +4506,6 @@ template {
 .post .header__email, .post .inside-page .header__link, .inside-page .post .header__link {
   left: 60px;
   padding-top: 90px;
-}
-
-.post .heading {
-  font-size: 48px;
-  font-weight: 400;
-  margin-bottom: 60px;
-  color: #fff;
-}
-
-.post .heading_blog {
-  padding-top: 150px;
 }
 
 .post__elements {
@@ -4049,12 +4533,28 @@ template {
   z-index: 3;
 }
 
+.post__container .heading {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 54px;
+  margin-bottom: 60px;
+  color: #fff;
+}
+
+.post__container .heading_blog {
+  padding-top: 150px;
+}
+
 .post__item {
   margin-bottom: 40px;
   background-size: cover;
   background-position: center;
   width: 100%;
   padding-top: 150px;
+}
+
+.post__item.last {
+  margin-bottom: 0;
 }
 
 .post__item:hover {
@@ -4091,6 +4591,45 @@ template {
   padding: 0 20px 10px;
 }
 
+/* Media */
+@media (max-width: 992px) {
+  .post .header__email, .post .inside-page .header__link, .inside-page .post .header__link {
+    left: 60px;
+    right: auto;
+    padding-top: 60px;
+  }
+  .post .header__logo {
+    width: 250px;
+  }
+  .post__container .heading {
+    font-size: 36px;
+    line-height: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .post .header__email, .post .inside-page .header__link, .inside-page .post .header__link {
+    left: 20px;
+    padding-top: 120px;
+  }
+  .post__container .heading_blog {
+    padding-top: 180px;
+  }
+}
+
+@media (max-width: 576px) {
+  .post .header__email, .post .inside-page .header__link, .inside-page .post .header__link {
+    left: 20px;
+    padding-top: 90px;
+  }
+  .post__container .heading {
+    font-size: 28px;
+    font-weight: bold;
+    line-height: 34px;
+  }
+}
+
+/* Castomize post column */
 @media (min-width: 992px) {
   .post .col-lg-3 {
     -webkit-box-flex: 0;
@@ -4254,6 +4793,169 @@ template {
   margin-top: 0;
 }
 
+/* Media */
+@media (max-width: 1400px) {
+  .inside-page .header__nav, .inside-page .go-to-top {
+    top: 20px;
+  }
+  .inside-page .header__logo {
+    padding-top: 130px;
+    left: 40px;
+  }
+  .inside-page .header__email, .inside-page .header__link {
+    left: -50px;
+    padding-top: 40px;
+  }
+  .inside-page .header__link {
+    left: auto;
+    right: 120px;
+  }
+  .inside-page .page {
+    padding-top: 110px;
+  }
+  .inside-page .go-to-top {
+    top: auto;
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 992px) {
+  .page__image {
+    height: 300px;
+  }
+  .page__info .page__date,
+  .page__info .page__person,
+  .page__info .page__reading {
+    font-size: 12px;
+    padding: 10px 20px;
+  }
+  .page__info .page__breadcrumb {
+    padding: 10px 20px;
+  }
+  .page__info .page__breadcrumb.breadcrumb {
+    padding: 10px 20px;
+  }
+  .page__info .page__person {
+    padding: 10px 0;
+  }
+  .page__content {
+    padding: 40px 20px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .page__content .heading {
+    font-size: 36px;
+    line-height: 40px;
+    margin-bottom: 40px;
+  }
+  .page__content h2, .page__content .h2 {
+    font-size: 32px;
+    line-height: 38px;
+  }
+  .page__content h3, .page__content .h3 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+  .page__content p, .page__content ul, .page__content ol {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .page__content blockquote {
+    padding-left: 40px;
+    background: url("../images/icons/quotes.svg") no-repeat left top/25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .inside-page .header__email, .inside-page .header__link {
+    left: 20px;
+  }
+  .inside-page .header__link {
+    left: auto;
+  }
+}
+
+@media (max-width: 576px) {
+  .inside-page .header__email, .inside-page .header__link {
+    padding-top: 20px;
+    left: 20px;
+  }
+  .inside-page .header__link {
+    padding-top: 65px;
+    right: auto;
+    left: 20px;
+  }
+  .inside-page .header__logo {
+    padding-top: 115px;
+    left: 20px;
+  }
+  .page__image {
+    height: 200px;
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+  .page__info {
+    padding: 10px 0;
+    margin-left: -20px;
+    margin-right: -20px;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .page__info .page__date,
+  .page__info .page__person {
+    font-size: 14px;
+    width: 100%;
+    padding: 5px 20px;
+    margin: 0;
+  }
+  .page__info .page__reading {
+    display: none;
+  }
+  .page__info .page__breadcrumb {
+    padding: 5px 20px;
+  }
+  .page__info .page__breadcrumb.breadcrumb {
+    padding: 5px 20px;
+  }
+  .page__content {
+    padding: 40px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .page__content .heading {
+    font-size: 26px;
+    line-height: 30px;
+    margin-bottom: 40px;
+  }
+  .page__content h2, .page__content .h2 {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
+  .page__content h3, .page__content h3 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .page__content h4, .page__content h4 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .page__content h5, .page__content .h5, .page__content h6, .page__content .h6 {
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .page__content p, .page__content ul, .page__content ol {
+    font-size: 16px;
+    line-height: 26px;
+  }
+  .page__content blockquote {
+    padding-left: 30px;
+    background: url("../images/icons/quotes.svg") no-repeat left top/20px;
+  }
+}
+
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -4333,4 +5035,43 @@ a:hover, a:focus {
 
 .go-to-top.active:hover {
   opacity: 1;
+}
+
+/* Media */
+@media (max-width: 1400px) {
+  .go-to-top {
+    top: auto;
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 992px) {
+  .d-flex-md {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .go-to-top {
+    top: auto;
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .d-flex-sm {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .go-to-top {
+    top: auto;
+    bottom: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .go-to-top {
+    top: auto;
+    bottom: 20px;
+  }
 }
