--- a/src/blog_inside.pug
+++ b/src/blog_inside.pug
@@ -45,83 +45,84 @@ html(lang="ru", dir="ltr")
                     li.header__navbar__item
                         a.header__navbar__link(href="#") Дизайн
                 a.nav__close#navbarClose Закрыть меню
-        .post.page
-            .post__elements.elements_01
-                svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
-                    defs
-                        filter#shadow(filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%")
-                            feGaussianBlur(in="SourceAlpha" result="blur" stdDeviation="3")
-                            feOffset(dx="5" dy="5" in="blur" result="offsetBlurredAlpha")
-                            feComponentTransfer
-                                feFuncA(type="linear" slope="0.2")
-                            feMerge
-                                feMergeNode
-                                feMergeNode(in="SourceGraphic")
-                        linearGradient#gradient(data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
-                            stop(offset="0" stop-color="#222222")
-                            stop(offset="1" stop-color="#343434")
-                    g(fill-rule="nonzero")
-                        path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
-            .post__elements.elements_02
-                svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
-                    defs
-                        linearGradient#gradient_02(data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
-                            stop(offset="0" stop-color="#222222")
-                            stop(offset="1" stop-color="#343434")
-                    g(style="fill: url(#gradient_02); filter: url(#shadow);")
-                        rect(x="12" y="9.5" width="71" height="160")
-                        rect(x="97" y="9.5" width="71" height="160")            
-            .container.post__container
-                .row.justify-content-center
-                    .col-sm-10.col-xl-8
-                        .page__image(style="background-image:url('../images/image_blog.png');")
-                        .page__info
-                            .page__breadcrumb.breadcrumb
-                                .breadcrumb__item 
-                                    a(href="#") Главная
-                                |  / 
-                                .breadcrumb__item 
-                                    a(href="#") Блог
-                                |  / 
-                                .breadcrumb__item 
-                                    span 6 способов прокачать первый экран на вашем сайте
-                            .page__reading Время чтения: 
-                                span.text-bold 5 минут
-                        .page__content
-                            h1.heading 6 способов прокачать первый экран на вашем сайте
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
-                            img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
-                            h2 Заголовок h2
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h3 Заголовок h3
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h4 Заголовок h4
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                            h5 Заголовок h5
-                            p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-        .post-preview
-            .container
-                .heading Самое актуальное в нашем 
-                    a.link(href="#") блоге
-                .row
-                    .col-lg-3.post-preview__item
-                        a(href="#").post-preview__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
-                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.post-preview__item
-                        a(href="#").post-preview__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
-                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-                    .col-lg-3.post-preview__item
-                        a(href="#").post-preview__item__title Продвижение сайта почти бесплатно
-                        .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
-        .content.content_contact.inside
-            .container
-                .row
-                    .col-xl-6
-                        h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
-                        form.form.form_inline(action="")
-                            input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
-                            button.btn.btn_primary(type="submit") Хочу больше клиентов
-                    .col-xl-3
-                        .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
+        main
+            article.post.page
+                .post__elements.elements_01
+                    svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
+                        defs
+                            filter#shadow(filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%")
+                                feGaussianBlur(in="SourceAlpha" result="blur" stdDeviation="3")
+                                feOffset(dx="5" dy="5" in="blur" result="offsetBlurredAlpha")
+                                feComponentTransfer
+                                    feFuncA(type="linear" slope="0.2")
+                                feMerge
+                                    feMergeNode
+                                    feMergeNode(in="SourceGraphic")
+                            linearGradient#gradient(data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
+                                stop(offset="0" stop-color="#222222")
+                                stop(offset="1" stop-color="#343434")
+                        g(fill-rule="nonzero")
+                            path(style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90")
+                .post__elements.elements_02
+                    svg(viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet")
+                        defs
+                            linearGradient#gradient_02(data-name="gradient_02" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse")
+                                stop(offset="0" stop-color="#222222")
+                                stop(offset="1" stop-color="#343434")
+                        g(style="fill: url(#gradient_02); filter: url(#shadow);")
+                            rect(x="12" y="9.5" width="71" height="160")
+                            rect(x="97" y="9.5" width="71" height="160")            
+                section.container.post__container
+                    .row.justify-content-center
+                        .col-sm-10.col-xl-8
+                            .page__image(style="background-image:url('../images/image_blog.png');")
+                            .page__info
+                                .page__breadcrumb.breadcrumb
+                                    .breadcrumb__item 
+                                        a(href="#") Главная
+                                    |  / 
+                                    .breadcrumb__item 
+                                        a(href="#") Блог
+                                    |  / 
+                                    .breadcrumb__item 
+                                        span 6 способов прокачать первый экран на вашем сайте
+                                .page__reading Время чтения: 
+                                    span.text-bold 5 минут
+                            .page__content
+                                h1.heading 6 способов прокачать первый экран на вашем сайте
+                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
+                                img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
+                                h2 Заголовок h2
+                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                h3 Заголовок h3
+                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                h4 Заголовок h4
+                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                h5 Заголовок h5
+                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+            aside.post-preview
+                .container
+                    header.heading Самое актуальное в нашем 
+                        a.link(href="#") блоге
+                    .row
+                        article.col-xl-3.col-lg-5.post-preview__item
+                            a(href="#").post-preview__item__title 6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте
+                            .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                        article.col-xl-3.col-lg-5.post-preview__item
+                            a(href="#").post-preview__item__title О&nbsp;чем нужно помнить, создавая уникальные тексты?
+                            .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+                        article.col-xl-3.col-lg-10.post-preview__item.last
+                            a(href="#").post-preview__item__title Продвижение сайта почти бесплатно
+                            .post-preview__item__offer Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.
+            aside.content.content_contact.inside
+                .container
+                    .row
+                        .col-xl-6
+                            h4.heading.heading_medium Нужны клиенты? <br/> Мы знаем как их получить
+                            form.form.form_inline(action="")
+                                input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
+                                button.btn.btn_primary(type="submit") Хочу больше клиентов
+                        .col-xl-3
+                            .offer How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. 
         include chunks/footer.pug
