--- a/src/css/blocks/_footer.scss
+++ b/src/css/blocks/_footer.scss
@@ -75,6 +75,7 @@
 @media(max-width: 768px){}
 @media(max-width: 576px){
     .footer{
+        padding: 40px 0 30px;
         &__email{
             margin-top: 10px;
         }
