--- a/src/css/content/_content.scss
+++ b/src/css/content/_content.scss
@@ -2,9 +2,6 @@
     position: relative;
     padding: 100px 0;
 
-    // .margin-top{margin-top: 50px;}
-    // .margin-bottom{margin-bottom: 50px;}
-
     .heading{
         font-size: 54px;
         font-weight: 700;
@@ -95,7 +92,7 @@
     }
 
     &__group{
-        margin: 40px 0;
+        margin: 40px 0 25px;
         
         &__link{
             display: inline-block;
@@ -122,5 +119,61 @@
     /* PADDING LARGE */
     &_padding{
         padding: 150px 0;
+    }
+}
+
+@media(max-width: 1400px){
+    .content{
+        .offer{
+            &.last-xl{
+                margin-bottom: 40px;
+            }
+        }
+
+        &_padding {
+            padding: 100px 0;
+        }
+    }
+}
+@media(max-width: 992px){}
+@media(max-width: 768px){
+    .content{
+        .heading {
+            font-size: 36px;
+            line-height: 44px;
+            margin-bottom: 40px;
+            
+            & + .offer{
+                margin-top: 40px;
+            }
+
+            &_small{
+                font-size: 32px;
+                line-height: 40px;
+            }
+        }
+        .element_point{
+            max-width: 100%;
+        }
+    }
+}
+@media(max-width: 576px){
+    .content{
+        padding: 60px 0;
+        .heading {
+            font-size: 28px;
+            line-height: 34px;
+
+            &_small{
+                font-size: 22px;
+                line-height: 30px;
+            }
+        }
+        &__group{
+            &__link{
+                font-size: 12px;
+                padding: 10px 12px 8px;
+            }
+        }
     }
 }
