--- a/src/css/content/_contentPrice.scss
+++ b/src/css/content/_contentPrice.scss
@@ -13,3 +13,34 @@
         margin-top: 100px;
     }
 }
+
+/* Media */
+@media(max-width: 1400px){
+    .content_price{
+        .element{
+            display: none;
+        }
+    }
+}
+@media(max-width: 992px){}
+@media(max-width: 768px){
+    .content_price{
+        .content_price__container{
+            & + .content_price__container{
+                margin-top: 60px;
+            }
+        }
+        .element{
+            display: none;
+        }
+    }
+}
+@media(max-width: 576px){
+    .content_price{
+        .content_price__container{
+            & + .content_price__container{
+                margin-top: 0px;
+            }
+        }
+    }
+}
