--- a/src/css/form/_buttons.scss
+++ b/src/css/form/_buttons.scss
@@ -28,3 +28,18 @@
         }
     }
 }
+
+/* Media */
+@media(max-width: 1400px){
+    .btn{
+        font-size: 16px;
+        padding: 15px 40px;
+    }
+}
+@media(max-width: 992px){}
+@media(max-width: 768px){}
+@media(max-width: 576px){
+    .btn{
+        width: auto;
+    }
+}
