--- a/src/css/page/_marketing.scss
+++ b/src/css/page/_marketing.scss
@@ -104,3 +104,84 @@
         }
     }
 }
+
+/* Media */
+@media(max-width: 1400px){
+    .marketing{
+        .content{
+            &_mockup {
+                .element{
+                    width: 280px;
+                }
+            }
+            &_color{
+                .row{
+                    .column{
+                        .heading {
+                            font-size: 18px;
+                            line-height: 24px;
+                            white-space: normal;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media(max-width: 992px){
+    .marketing{
+        .content{
+            .col-comment{
+                .element{
+                    display: none;
+                }
+            }
+            &_color{
+                padding: 60px 0;
+                .row{
+                    flex-wrap: wrap;
+                    .column{
+                        .heading {
+                            font-size: 26px;
+                            line-height: 34px;
+                            white-space: normal;
+                            margin-bottom: 20px;
+                            & + .offer {
+                                margin-top: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+            &_mockup{
+                .element {
+                    bottom: -80px;
+                }
+            }
+        }
+    }
+}
+@media(max-width: 768px){
+    .marketing{
+        .content{
+            &_form {
+                padding-top: 120px;
+            }
+        }
+    }
+}
+@media(max-width: 576px){
+    .marketing{
+        .content{
+            &_form{
+                .heading{
+                    font-size: 22px;
+                    line-height: 28px;
+                }
+            }
+            .list{
+                padding: 20px;
+            }
+        }
+    }
+}
